data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4029.wast
;; 8. **Boundary Table Index Test**:    - **Description**: Call the function at the exact upper boundary index of the table using `call_indirect`.    - **Constraint Check**: Ensure the operation succeeds without out-of-bounds trap.    - **Stack Corruption Check**: Verify that stack state reflects a correct function call.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32) (result i32) (local.get 0))
    (func $boundary-call (call_indirect (type 0) (i32.const 1)))
  )
  "element is out of bounds"
)